--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,9 @@ pdf2image==1.16.3
 Pillow>=11.0.0
 watchdog==3.0.0
 openpyxl>=3.1.0
-
+opencv-python>=4.8.0
+numpy>=2.0.0
+Flask==3.0.3
+Flask-SocketIO==5.3.6
+Flask-CORS==4.0.0
+python-socketio==5.11.2
