--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,8 @@ Flask==3.0.3
 Flask-SocketIO==5.3.6
 Flask-CORS==4.0.0
 python-socketio==5.11.2
+gunicorn==21.2.0
+eventlet==0.35.2
+pandas>=2.0.0
+python-dateutil>=2.8.0
+requests>=2.31.0
